--- a/templates/adds.html
+++ b/templates/adds.html
@@ -195,33 +195,32 @@
                     <input type="tel" name="phone1" placeholder="رقم الهاتف 1" />
                     <input type="tel" name="phone2" placeholder="رقم الهاتف 2" />
                     <select name="governorate" id="governorate" style="width: 100%;">
-                        <option value="القاهرة">القاهرة</option>
-                        <option value="الجيزة">الجيزة</option>
-                        <option value="الإسكندرية">الإسكندرية</option>
-                        <option value="الدقهلية">الدقهلية</option>
-                        <option value="البحيرة">البحيرة</option>
-                        <option value="المنوفية">المنوفية</option>
-                        <option value="الشرقية">الشرقية</option>
-                        <option value="بورسعيد">بورسعيد</option>
-                        <option value="السويس">السويس</option>
-                        <option value="الإسماعيلية">الإسماعيلية</option>
-                        <option value="الشيخ زايد">الشيخ زايد</option>
-                        <option value="الفيوم">الفيوم</option>
-                        <option value="بني سويف">بني سويف</option>
-                        <option value="المنيا">المنيا</option>
-                        <option value="القليوبية">القليوبية</option>
-                        <option value="الوادي الجديد">الوادي الجديد</option>
-                        <option value="سوهاج">سوهاج</option>
-                        <option value="قنا">قنا</option>
-                        <option value="الأقصر">الأقصر</option>
-                        <option value="أسيوط">أسيوط</option>
-                        <option value="أسوان">أسوان</option>
-                        <option value="الغربية">الغربية</option>
-                        <option value="شمال سيناء">شمال سيناء</option>
-                        <option value="جنوب سيناء">جنوب سيناء</option>
-                        <option value="البحر الأحمر">البحر الأحمر</option>
-                        <option value="الواحات البحرية">الواحات البحرية</option>
-                        <option value="مطروح">مطروح</option>
+                        <option value="1">القاهرة</option>
+                        <option value="2">البحيرة</option>
+                        <option value="3">الاسكندرية</option>
+                        <option value="4">الدلتا</option>
+                        <option value="5">الاسماعيلية</option>
+                        <option value="6">بورسعيد</option>
+                        <option value="7">السويس</option>
+                        <option value="8">الشرقية</option>
+                        <option value="9">بنى سويف</option>
+                        <option value="10">المنيا</option>
+                        <option value="11">اسيوط</option>
+                        <option value="12">سوهاج</option>
+                        <option value="13">الساحل الشمالي</option>
+                        <option value="14">مطروح</option>
+                        <option value="15">قنا</option>
+                        <option value="16">الاقصر</option>
+                        <option value="17">اسوان</option>
+                        <option value="18">شرم الشيخ</option>
+                        <option value="19">الغردقة</option>
+                        <option value="20">مدن البحر الاحمر</option>
+                        <option value="21">الفيوم</option>
+                        <option value="22">خارج التغطية</option>
+                        <option value="23">موقوف</option>
+                        <option value="24">ش</option>
+                        <option value="25">منصورة</option>
+                        <option value="26">قليوب</option>
                     </select> <br><br>
                     <textarea name="address" placeholder='العنوان' cols="40" rows="5"></textarea>
                     <button type="submit">إرسال</button>
