--- a/templates/dprice.html
+++ b/templates/dprice.html
@@ -209,149 +209,319 @@ h1 {
 </div>
 <div class="profile-details">
     <form action="/saveprice/{{ price.sid }}" method="post">
-        <table>
-            <tr>
-                <td class="label">القاهرة:</td>
-                <td>
-                  <input type="text" name="cairo" value="{{ price.Cairo }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الإسكندرية:</td>
-                <td>
-                  <input type="text" name="Alexandria" value="{{ price.Alexandria }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الجيزة:</td>
-                <td>
-                  <input type="text" name="Giza" value="{{ price.Giza }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">شرم الشيخ:</td>
-                <td>
-                  <input type="text" name="SharmElSheikh" value="{{ price.SharmElSheikh }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الأقصر :</td>
-                <td>
-                  <input type="text" name="Luxor" value="{{ price.Luxor }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">أسوان :</td>
-                <td>
-                  <input type="text" name="Aswan" value="{{ price.Aswan }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الغردقة :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Hurghada }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الإسماعيلية :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Ismailia }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">طنطا :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Tanta }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">المنصورة :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Mansoura }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">بورسعيد :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.PortSaid }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">السويس :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Suez }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">بنها :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Banha }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">المحلة الكبرى :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.AlMahallaAlKubra }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">سوهاج :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Sohag }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">قنا :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Qena }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">أسيوط :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Asyut }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">دمياط :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Damietta }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">الزقازيق :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.Zagazig }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="label">العريش :</td>
-                <td>
-                  <input type="text" name="name" value="{{ price.ElArish }}" class="readonly" readonly>L.E
-                  <a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
-                </td>
-              </tr>
-
-            </table>
+        <table><tr>
+          <td class="label">القاهرة:</td>
+          <td>
+            <input
+              type="text"
+              name="1"
+              value="{{ price.p1 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">البحيرة:</td>
+          <td>
+            <input
+              type="text"
+              name="2"
+              value="{{ price.p2 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الاسكندرية:</td>
+          <td>
+            <input
+              type="text"
+              name="3"
+              value="{{ price.p3 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الدلتا:</td>
+          <td>
+            <input
+              type="text"
+              name="4"
+              value="{{ price.p4 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الاسماعيلية:</td>
+          <td>
+            <input
+              type="text"
+              name="5"
+              value="{{ price.p5 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">بورسعيد:</td>
+          <td>
+            <input
+              type="text"
+              name="6"
+              value="{{ price.p6 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">السويس:</td>
+          <td>
+            <input
+              type="text"
+              name="7"
+              value="{{ price.p7 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الشرقية:</td>
+          <td>
+            <input
+              type="text"
+              name="8"
+              value="{{ price.p8 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">بنى سويف:</td>
+          <td>
+            <input
+              type="text"
+              name="9"
+              value="{{ price.p9 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">المنيا:</td>
+          <td>
+            <input
+              type="text"
+              name="10"
+              value="{{ price.p10 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">اسيوط:</td>
+          <td>
+            <input
+              type="text"
+              name="11"
+              value="{{ price.p11 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">سوهاج:</td>
+          <td>
+            <input
+              type="text"
+              name="12"
+              value="{{ price.p12 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الساحل الشمالي:</td>
+          <td>
+            <input
+              type="text"
+              name="13"
+              value="{{ price.p13 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">مطروح:</td>
+          <td>
+            <input
+              type="text"
+              name="14"
+              value="{{ price.p14 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">قنا:</td>
+          <td>
+            <input
+              type="text"
+              name="15"
+              value="{{ price.p15 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الاقصر:</td>
+          <td>
+            <input
+              type="text"
+              name="16"
+              value="{{ price.p16 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">اسوان:</td>
+          <td>
+            <input
+              type="text"
+              name="17"
+              value="{{ price.p17 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">شرم الشيخ:</td>
+          <td>
+            <input
+              type="text"
+              name="18"
+              value="{{ price.p18 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الغردقة:</td>
+          <td>
+            <input
+              type="text"
+              name="19"
+              value="{{ price.p19 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">مدن البحر الاحمر:</td>
+          <td>
+            <input
+              type="text"
+              name="20"
+              value="{{ price.p20 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">الفيوم:</td>
+          <td>
+            <input
+              type="text"
+              name="21"
+              value="{{ price.p21 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">خارج التغطية:</td>
+          <td>
+            <input
+              type="text"
+              name="22"
+              value="{{ price.p22 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">موقوف:</td>
+          <td>
+            <input
+              type="text"
+              name="23"
+              value="{{ price.p23 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">ش:</td>
+          <td>
+            <input
+              type="text"
+              name="24"
+              value="{{ price.p24 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">منصورة:</td>
+          <td>
+            <input
+              type="text"
+              name="25"
+              value="{{ price.p25 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        <tr>
+          <td class="label">قليوب:</td>
+          <td>
+            <input
+              type="text"
+              name="26"
+              value="{{ price.p26 }}"
+              class="readonly"
+              readonly
+            />L.E<a href="#" class="edit-button" onclick="enableField(this)">تعديل</a>
+          </td>
+        </tr>
+        </table>
           
         <button type="submit" class="submit-button">تحديث الملف</button>
     </form>
