--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
         width: 250px;
         height: 100vh;
         padding-top: 20px;
-        position: fixed;
+        /* position: fixed; */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -47,6 +47,14 @@
         color: #fff;
         width: 250px;
         padding-top: 20px;
+      }
+      @media (max-width:1200px) {
+        .sidebar{
+          position: absolute;
+          width: 100%;
+          height: 100;
+          display: none;
+        }
       }
 
       .sidebar-logo {
@@ -129,7 +137,8 @@
       }
       .content {
         flex: 1;
-        padding: 30px 20% 0 10%;
+        /* padding: 30px 20% 0 10%; */
+        /* display: none; */
       }
       .link svg{
         margin: 0 0 0 10px;
