--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% block content %}
 <br><br><link href="https://fonts.cdnfonts.com/css/barcode-font" rel="stylesheet">
   <style>
+    
     /* أسلوب عام للجدول */
     table {
       border-collapse: collapse;
@@ -116,7 +117,7 @@
             cursor: pointer;
         }
         
-        @media screen and (max-width: 768px) {
+        @media screen and (max-width: 1200px) {
             .wallet-balance {
                 flex-direction: column;
             }
@@ -129,6 +130,13 @@
             }
             .curved-rectangle {
                 width: 100%;
+            }
+            .sttick{
+              flex-direction: column;
+            }
+            #myChart{
+              width: 50% !important;
+              height: auto !important;
             }
         }
         
@@ -150,16 +158,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
   
   <!-- Flex container for chart and table -->
-  <div style="display: flex; justify-content: space-between;">
+  <div style="display: flex; justify-content: space-between;" class="sttick"><center>
     <!-- Chart container -->
-    <div class="canvas-container" style="flex: 1;margin: 50px 0 0 0;">
+    <div class="canvas-container" style="flex: 1;margin: 10px 0 0 0; max-width: 800px;">
         <h2>احصائية الشحنات</h2>
     
-      <canvas id="myChart" style="max-width: 600px;"></canvas>
+      <canvas id="myChart" style="width: 800px;"></canvas>
     </div>
-    
+   </center><br>
     <!-- Table container -->
-    <div style="flex: 1; padding-left: 20px;">
+    <div style="flex: 1; padding-left: 20px;" class="table-dash">
         <table border="1" id="data-table">
             <thead>
                 <tr>
